--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,8 +1,33 @@
-body {
-    font-family: 'Pragmatica_Cond_Book', sans-serif; 
-    font-family: 'Pragmatica_Cond_Medium', sans-serif;
+
+
+#logo-container {
+  position: absolute;
+  top: 20px;        
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  z-index: 10;      
+}
+
+#logo-container img {
+  max-width: 400px;  
+}
+
+.logo-caption {
+  font-size: 14px;
+  color: #000000;
+  margin-top: 5px;
+  font-family:monospace;
+}
+
+  .three_office {
+    width: 80vw;
+    height: 60vh;
+    cursor: grab;
+    position: relative;
+    z-index: 1;
   }
-  
-  h1, h2 {
-    font-family: 'Pragmatica_Cond_Medium', sans-serif;
+
+  .three_office:active {
+    cursor: grabbing;
   }
