--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,6 @@
 @import url('reset.css');
-@import url('fonts.css');
 @import url('layout.css');
 @import url('responsive.css');
+@import url('customization.css');
+@import url('recycle.css');
+@import url('upcycle.css');
